--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -13,7 +13,6 @@
     height: 60px;
     margin-bottom: 24px;
     font-size: 24px;
-    line-height: 32px;
     color: map-get($color-palette, black100);
   }
 
@@ -34,5 +33,21 @@
   &__finish-scope-button {
     min-height: 32px;
     width: 136px;
+  }
+
+  &__summary-panel {
+    & > :first-child {
+      margin-right: 16px;
+    }
+  }
+
+  &__routing-tabs-panel {
+    height: 49px;
+    width: 100%;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
+  }
+
+  &__tab-icon-wrapper {
+    margin-right: 8px;
   }
 }
