--- a/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
@@ -1,69 +1,15 @@
 @import '../../../../common/style-guide/index';
 
 .code-coverage-card {
-  height: 160px;
+  height: 100%;
   width: 100%;
-  border: 1px solid map-get($color-palette, light-blue);
-  background-color: map-get($color-palette, white);
 
-  &__title {
-    margin: 14px 16px;
-    font-size: 14px;
-    font-family: $semibold-font;
-    color: map-get($color-palette, black100);
-  }
-
-  &__code-coverage {
-    margin: 14px 16px;
-    font-size: 32px;
+  &__total-coverage {
+    width: 100%;
+    line-height: 40px;
     font-family: $light-font;
-    line-height: 32px;
-
-    &--type {
-      &--increase {
-        color: map-get($color-palette, green100);
-      }
-
-      &--decrease {
-        color: map-get($color-palette, red100);
-      }
-    }
-
-    svg {
-      color: map-get($color-palette, black);
-      margin-left: 8px;
-    }
-  }
-
-  &__methods-count {
-    margin: 14px 16px;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    line-height: 20px;
-    color: map-get($color-palette, black50);
-
-    & > * {
-      margin-right: 8px;
-    }
-  }
-
-  &__warning-icon {
-    color: map-get($color-palette, red100);
-  }
-
-  &__success-icon {
-    color: map-get($color-palette, green100);
-  }
-
-  &__spinner-wrapper {
-    margin: 14px 16px;
-    color: map-get($color-palette, middle-blue);
-    font-size: 14px;
-    line-height: 20px;
-
-    & > * {
-      margin-right: 8px;
-    }
+    font-size: 40px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid map-get($color-palette, black10);
   }
 }
