--- a/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
@@ -11,5 +11,18 @@
     font-size: 40px;
     padding-bottom: 24px;
     border-bottom: 1px solid map-get($color-palette, black10);
+
+    &--type {
+      &--increase {
+        color: map-get($color-palette, green100);
+      }
+      &--decrease {
+        color: map-get($color-palette, red100);
+      }
+    }
+  }
+
+  &__arrow-icon {
+    margin-left: 6px;
   }
 }
