--- a/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
@@ -11,6 +11,10 @@
     font-size: 40px;
     padding-bottom: 24px;
     border-bottom: 1px solid map-get($color-palette, black10);
+
+    &--clickable {
+      cursor: pointer;
+    }
   }
 
   &__additional-info {
