remove n/a for empty values

--- a/src/pages/agent-full-page/coverage-plugin/scope/current-scope/current-scope.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/current-scope/current-scope.module.scss
@@ -1,6 +1,6 @@
 @import '../../../../../common/style-guide/index';
 
-.scopes {
+.current-scope {
   &__content {
     height: 120px;
     border-bottom: 1px solid map-get($color-palette, black10);
