--- a/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
@@ -14,6 +14,10 @@
 
     &--clickable {
       cursor: pointer;
+
+      &:hover {
+        border-bottom: 1px solid map-get($color-palette, black100);
+      }
     }
   }
 
