--- a/src/pages/agent-full-page/coverage-plugin/scope/current-scope/current-scope.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/current-scope/current-scope.module.scss
@@ -48,10 +48,15 @@
 
   &__actions-section {
     color: map-get($color-palette, blue100);
+    display: flex;
 
     & > * {
       margin-right: 24px;
       cursor: pointer;
     }
+  }
+
+  &__more-options {
+    width: 15px;
   }
 }
