--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/finish-scope-modal/finish-scope-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/finish-scope-modal/finish-scope-modal.module.scss
@@ -12,6 +12,19 @@
     color: map-get($color-palette, red100);
   }
 
+  &__empty-scope-warning {
+    height: 40px;
+    width: 100%;
+    font-size: 14px;
+    background-color: rgba(map-get($color-palette, yellow50), 0.1);
+  }
+
+  &__empty-scope-warning-icon {
+    color: map-get($color-palette, yellow50);
+    margin-left: 24px;
+    margin-right: 8px;
+  }
+
   &__error-message-icon {
     margin-left: 24px;
     margin-right: 8px;
@@ -32,8 +45,9 @@
 
   &__finish-scope-button {
     min-height: 32px;
-    width: 116px;
+    width: auto;
     font-size: 14px;
+    padding: 0 16px;
   }
 
   &__cancel-button {
