EPMDJ-1017: added menu component, added menu to change scope name
Issue: EPMDJ-1017

--- a/src/pages/agent-full-page/coverage-plugin/scope/current-scope/current-scope.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/current-scope/current-scope.module.scss
@@ -50,14 +50,17 @@
   &__actions-section {
     color: map-get($color-palette, blue100);
     display: flex;
-
-    & > * {
-      margin-right: 24px;
-      cursor: pointer;
-    }
+    align-items: flex-start;
+    height: 60px;
   }
 
-  &__more-options {
-    width: 15px;
+  &__finish-scope-button {
+    min-height: 32px;
+    width: 96px;
+    margin-right: 16px;
+
+    & > * {
+      margin-right: 8px;
+    }
   }
 }
