--- a/src/pages/agent-full-page/coverage-plugin/scope/delete-scope-modal/delete-scope-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/delete-scope-modal/delete-scope-modal.module.scss
@@ -1,6 +1,6 @@
-@import '../../../../../../common/style-guide/index';
+@import '../../../../../common/style-guide/index';
 
-.finish-scope-modal {
+.delete-scope-modal {
   width: 530px;
 
   &__error-message {
@@ -12,19 +12,6 @@
     color: map-get($color-palette, red100);
   }
 
-  &__empty-scope-warning {
-    height: 40px;
-    width: 100%;
-    font-size: 14px;
-    background-color: rgba(map-get($color-palette, yellow50), 0.1);
-  }
-
-  &__empty-scope-warning-icon {
-    color: map-get($color-palette, yellow50);
-    margin-left: 24px;
-    margin-right: 8px;
-  }
-
   &__error-message-icon {
     margin-left: 24px;
     margin-right: 8px;
@@ -34,16 +21,16 @@
     margin: 24px;
   }
 
-  &__ignore-scope {
-    margin-top: 24px;
-    margin-bottom: 32px;
+  &__message {
+    font-size: 14px;
+    line-height: 24px;
   }
 
   &__actions-panel {
     margin-top: 38px;
   }
 
-  &__finish-scope-button {
+  &__delete-scope-button {
     min-height: 32px;
     width: auto;
     font-size: 14px;
