--- a/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
@@ -9,33 +9,47 @@
     line-height: 40px;
     font-family: $light-font;
     font-size: 40px;
-    padding-bottom: 24px;
-    border-bottom: 1px solid map-get($color-palette, black10);
 
     &--clickable {
       cursor: pointer;
-
-      &:hover {
-        border-bottom: 1px solid map-get($color-palette, black100);
-      }
+      background-image: linear-gradient(
+        to right,
+        map-get($color-palette, black100) 50%,
+        transparent 50%
+      );
+      background-position: 0 1.15em;
+      background-repeat: repeat-x;
+      background-size: 2px 1px;
     }
   }
 
   &__additional-info {
+    padding-top: 8px;
+    margin-top: 24px;
+    border-top: 1px solid map-get($color-palette, black10);
+  }
+
+  &__additional-info-item {
+    font-size: 12px;
+    line-height: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
 
-  &__additional-info-item {
-    font-size: 14px;
-    line-height: 24px;
+  &__additional-info-item-header {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: 20px;
+    color: $slate-gray;
   }
 
-  &__additional-info-item-header {
-    margin-top: 8px;
+  &__additional-info-item-value {
+    display: flex;
+    align-items: center;
     font-size: 12px;
-    line-height: 24px;
+    line-height: 20px;
     color: $slate-gray;
   }
 }
