EPMDJ-950: added finished scope badge at scope page
Issue: EPMDJ-950

--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -30,6 +30,20 @@
     color: map-get($color-palette, white);
   }
 
+  &__finished-badge {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 16px;
+    height: 20px;
+    width: 64px;
+    border-radius: 10px;
+    border: 1px solid map-get($color-palette, middle-blue);
+    font-size: 11px;
+    font-family: $semibold-font;
+    color: map-get($color-palette, middle-blue);
+  }
+
   &__finish-scope-button {
     min-height: 32px;
     width: 136px;
