--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -22,6 +22,7 @@
     filter: drop-shadow(0 0 24px rgba(0, 0, 0, 0.15));
     border-radius: 8px;
     background-color: map-get($color-palette, white);
+    z-index: 50;
 
     &::before {
       content: '';
