--- a/src/pages/agent-full-page/coverage-plugin/scope/rename-scope-modal/rename-scope-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/rename-scope-modal/rename-scope-modal.module.scss
@@ -4,7 +4,6 @@
   width: 480px;
 
   &__error-message {
-    height: 40px;
     width: 100%;
     background-color: rgba(255, 2, 2, 0.1);
     font-size: 14px;
@@ -15,6 +14,7 @@
   &__error-message-icon {
     margin-left: 24px;
     margin-right: 8px;
+    flex-shrink: 0;
   }
 
   &__content {
