EPMDJ-439: fix overflow at card view
Issue: EPMDJ-439

--- a/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
+++ b/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
@@ -6,6 +6,7 @@
   border: 1px solid map-get($color-palette, blue100);
   background-color: map-get($color-palette, white);
   cursor: pointer;
+  overflow: hidden;
 
   &__header {
     display: flex;
