--- a/src/pages/agent-info-page/agent-plugins-table/agent-plugins-table.module.scss
+++ b/src/pages/agent-info-page/agent-plugins-table/agent-plugins-table.module.scss
@@ -4,6 +4,12 @@
   display: flex;
   flex-grow: 1;
 
+  &__name-column {
+    color: map-get($color-palette, blue100);
+    font-family: $semibold-font;
+    cursor: pointer;
+  }
+
   &__status-column {
     display: flex;
   }
