redesign code coverage plugin

--- a/src/components/message-panel/message-panel.module.scss
+++ b/src/components/message-panel/message-panel.module.scss
@@ -2,7 +2,7 @@
 
 .message-panel {
   height: 48px;
-  width: calc(100% - 80px);
+  width: 100%;
   position: absolute;
   right: 0;
   z-index: 100;
