--- a/src/layouts/plugins-layout/plugins-layout.module.scss
+++ b/src/layouts/plugins-layout/plugins-layout.module.scss
@@ -2,31 +2,34 @@
 
 .plugin-layout {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
 
-  &__header {
-    height: 38px;
+  &__toolbar {
+    height: 50px;
     width: 100%;
     flex-shrink: 0;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
   }
 
-  &__sidebar {
-    height: 100%;
-    width: 80px;
+  &__header {
+    height: 112px;
+    width: 100%;
+    flex-shrink: 0;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
   }
 
-  &__content-wrapper {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
+  &__breadcrumbs {
+    height: 40px;
+    width: 100%;
+    flex-shrink: 0;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
   }
 
   &__content {
-    border: 1px solid map-get($color-palette, light-blue);
-    margin: 5px;
-    overflow-y: auto;
+    height: 100%;
+    width: 100%;
   }
 }
