--- a/src/pages/agent-full-page/agent-full-page.module.scss
+++ b/src/pages/agent-full-page/agent-full-page.module.scss
@@ -5,7 +5,9 @@
   width: 100%;
 
   &__arrow-back-icon {
-    margin-right: 16px;
+    font-size: 14px;
+    line-height: 20px;
+    font-family: $semibold-font;
     color: map-get($color-palette, blue100);
     cursor: pointer;
   }
