--- a/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-card/methods-section/methods-section.module.scss
@@ -1,14 +1,10 @@
 @import '../../../../../common/style-guide/index';
 
 .methods-section {
-  display: flex;
-  flex-direction: column;
-
   &__total {
-    width: 100%;
-    line-height: 40px;
+    line-height: 24px;
     font-family: $light-font;
-    font-size: 40px;
+    font-size: 24px;
 
     &--clickable {
       cursor: pointer;
@@ -24,32 +20,27 @@
   }
 
   &__additional-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     padding-top: 8px;
-    margin-top: 24px;
+    margin-top: 17px;
     border-top: 1px solid map-get($color-palette, black10);
   }
 
   &__additional-info-item {
-    font-size: 12px;
-    line-height: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    font-size: 12px;
+    line-height: 24px;
     justify-content: space-between;
   }
 
   &__additional-info-item-header {
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    line-height: 20px;
     color: $slate-gray;
   }
 
   &__additional-info-item-value {
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    line-height: 20px;
-    color: $slate-gray;
+    color: map-get($color-palette, black100);
   }
 }
