--- a/src/pages/agent-full-page/coverage-plugin/project-methods-card/project-methods-card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-card/project-methods-card.module.scss
@@ -1,6 +1,20 @@
 @import '../../../../common/style-guide/index';
 
 .project-methods-card {
-  height: 100%;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+
+  & > :not(:last-child) {
+    margin-right: 8px;
+  }
+
+  &__card-header {
+    font-size: 12px;
+    line-height: 16px;
+    font-family: $light-font;
+
+    & > * {
+      margin-right: 8px;
+    }
+  }
 }
