--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -56,10 +56,9 @@
     margin-right: 8px;
   }
 
-  &__summary-panel {
-    & > :first-child {
-      margin-right: 16px;
-    }
+  &__project-methods {
+    margin-top: 16px;
+    width: 100%;
   }
 
   &__routing-tabs-panel {
