EPMDJ-291: disable on/off plugin toggler
Issue: EPMDJ-291

--- a/src/forms/inputs/toggler/toggler.module.scss
+++ b/src/forms/inputs/toggler/toggler.module.scss
@@ -63,4 +63,10 @@
       color: map-get($color-palette, green100);
     }
   }
+
+  &--disabled {
+    opacity: 0.65;
+    pointer-events: none;
+    cursor: default;
+  }
 }
