--- a/src/forms/inputs/dropdown/dropdown.module.scss
+++ b/src/forms/inputs/dropdown/dropdown.module.scss
@@ -13,7 +13,7 @@
     font-size: 14px;
     font-family: $regular-font;
     line-height: 24px;
-    color: $gravel-color;
+    color: map-get($color-palette, blue100);
   }
 
   &__icon {
@@ -24,41 +24,37 @@
 
   &__item-list-wrapper {
     position: absolute;
-    top: 34px;
+    top: 30px;
     z-index: 150;
   }
 
   &__items-list {
     display: flex;
     flex-direction: column;
-    padding: 16px;
-    width: 216px;
+    padding: 8px;
+    width: 274px;
     max-height: 345px;
     overflow-y: auto;
     background-color: map-get($color-palette, white);
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.15);
-
-    &::before {
-      content: '';
-      position: absolute;
-      background-color: map-get($color-palette, white);
-      top: -10px;
-      left: calc(50% - 12px);
-      height: 20px;
-      width: 20px;
-      transform: rotate(45deg);
-      z-index: 140;
-    }
   }
 
   &__item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     font-size: 14px;
     line-height: 32px;
     color: map-get($color-palette, black100);
     cursor: pointer;
 
-    &--selected {
+    &:hover {
       background-color: rgba(248, 231, 28, 0.1);
     }
+  }
+
+  &__selected-icon {
+    width: 20px;
+    color: map-get($color-palette, blue100);
   }
 }
