--- a/src/pages/agent-full-page/build-list/build-list.module.scss
+++ b/src/pages/agent-full-page/build-list/build-list.module.scss
@@ -1,11 +1,34 @@
 @import '../../../common/style-guide/index';
 
 .build-list {
-  margin: 0 24px;
+  &__content {
+    margin: 0 24px;
+  }
 
   &__name-cell {
     color: map-get($color-palette, blue100);
     cursor: pointer;
     font-family: $semibold-font;
+  }
+
+  &__header-cell {
+    display: flex;
+    flex-direction: column-reverse;
+    height: 52px;
+    margin-top: 14px;
+  }
+
+  &__header-label {
+    font-size: 12px;
+    line-height: 24px;
+    font-family: $regular-font;
+  }
+
+  &__action-cell {
+    margin-right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    color: map-get($color-palette, blue100);
   }
 }
