--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
@@ -29,5 +29,11 @@
     background-position: 0 1.15em;
     background-repeat: repeat-x;
     background-size: 2px 1px;
+
+    &--type {
+      &--error {
+        color: map-get($color-palette, red100);
+      }
+    }
   }
 }
