EPMDJ-1594: added disable click at risks and tests to run
Issue: EPMDJ-1594

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
@@ -20,20 +20,25 @@
   &__count {
     font-size: 20px;
     line-height: 24px;
-    cursor: pointer;
-    background-image: linear-gradient(
-      to right,
-      map-get($color-palette, black100) 50%,
-      transparent 50%
-    );
-    background-position: 0 1.15em;
-    background-repeat: repeat-x;
-    background-size: 2px 1px;
+    pointer-events: none;
 
     &--type {
       &--error {
         color: map-get($color-palette, red100);
       }
+    }
+
+    &--clickable {
+      background-image: linear-gradient(
+        to right,
+        map-get($color-palette, black100) 50%,
+        transparent 50%
+      );
+      background-position: 0 1.15em;
+      background-repeat: repeat-x;
+      background-size: 2px 1px;
+      pointer-events: auto;
+      cursor: pointer;
     }
   }
 }
