--- a/src/pages/agent-full-page/coverage-plugin/overview/active-scope-actions/active-scope-actions.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/overview/active-scope-actions/active-scope-actions.module.scss
@@ -7,6 +7,13 @@
   text-transform: none;
   font-family: $regular-font;
 
+  &__scope-details {
+    margin-right: 16px;
+    font-size: 13px;
+    line-height: 20px;
+    cursor: pointer;
+  }
+
   &__finish-scope-button {
     min-height: 24px;
     width: 120px;
