--- a/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
+++ b/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
@@ -31,10 +31,44 @@
     flex-direction: column;
     justify-content: center;
     margin-left: 20px;
+
+    & > * {
+      margin-bottom: 8px;
+    }
   }
 
   &__agent-name {
     font-size: 32px;
     line-height: 40px;
+  }
+
+  &__agent-ip-address {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  &__agent-status {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 8px;
+    font-family: $semibold-font;
+    font-size: 11px;
+    line-height: 12px;
+    border: 1px solid currentColor;
+    border-radius: 50px;
+    padding: 2px 6px;
+
+    &--status {
+      &--online {
+        color: map-get($color-palette, green100);
+      }
+      &--not-registered {
+        color: map-get($color-palette, red100);
+      }
+      &--busy {
+        color: map-get($color-palette, yellow50);
+      }
+    }
   }
 }
