--- a/src/forms/inputs/dropdown/dropdown.module.scss
+++ b/src/forms/inputs/dropdown/dropdown.module.scss
@@ -11,7 +11,7 @@
 
   &__value {
     font-size: 14px;
-    font-family: $regular-font;
+    font-family: $semibold-font;
     line-height: 24px;
     color: map-get($color-palette, blue100);
   }
