--- a/src/pages/agent-full-page/coverage-plugin/tests-to-run-modal/tests-to-run-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/tests-to-run-modal/tests-to-run-modal.module.scss
@@ -26,8 +26,9 @@
     padding: 10px 24px;
     font-size: 13px;
     line-height: 20px;
-    opacity: 0.5;
     background-color: map-get($color-palette, light-blue);
+    overflow-wrap: break-word;
+    color: $slate-gray;
 
     & > * {
       margin-bottom: 8px;
@@ -38,6 +39,27 @@
     font-family: $semibold-font;
     font-size: 13px;
     line-height: 20px;
+  }
+
+  &__command-wrapper {
+    &:hover {
+      .test-to-run-modal__copy-icon {
+        display: initial;
+      }
+    }
+  }
+
+  &__curl-command {
+    width: 320px;
+  }
+
+  &__copy-icon {
+    display: none;
+    margin-left: 8px;
+    min-width: 16px;
+    min-height: 16px;
+    color: map-get($color-palette, blue100);
+    cursor: pointer;
   }
 
   &__content {
