EPMDJ-1610: changed the "Build list" page
Issue: EPMDJ-1610

--- a/src/pages/agent-full-page/build-list/build-list.module.scss
+++ b/src/pages/agent-full-page/build-list/build-list.module.scss
@@ -5,6 +5,22 @@
     margin: 0 24px;
   }
 
+  &__title {
+    height: 58px;
+    color: map-get($color-palette, black100);
+    font-family: $regular-font;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  &__items-count {
+    color: map-get($color-palette, middle-blue);
+    font-size: 18px;
+    font-family: $light-font;
+    line-height: 24px;
+    margin-left: 8px;
+  }
+
   &__name-cell {
     color: map-get($color-palette, blue100);
     cursor: pointer;
@@ -21,7 +37,6 @@
   &__header-label {
     font-size: 12px;
     line-height: 24px;
-    font-family: $regular-font;
   }
 
   &__action-cell {
