--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -23,6 +23,7 @@
       text-align: left;
       font-family: $semibold-font;
       border-bottom: 1px solid map-get($color-palette, dark-blue);
+      border-top: 1px solid map-get($color-palette, dark-blue);
       height: 48px;
     }
   }
