--- a/src/layouts/plugins-layout/plugins-layout.module.scss
+++ b/src/layouts/plugins-layout/plugins-layout.module.scss
@@ -3,9 +3,20 @@
 .plugin-layout {
   display: flex;
   flex-direction: column;
-  width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  width: 100%;
+
+  &__sidebar {
+    height: 100%;
+    max-width: 80px;
+  }
+
+  &__with-sidebar-wrapper {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+  }
 
   &__toolbar {
     height: 50px;
@@ -28,8 +39,19 @@
     border-bottom: 1px solid map-get($color-palette, light-blue);
   }
 
+  &__overflow-wrapper {
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
   &__content {
-    height: 100%;
+    display: flex;
+    width: 100%;
+    flex-grow: 1;
+    margin-bottom: 24px;
+  }
+
+  &__footer {
     width: 100%;
   }
 }
