added manage sessions modal to admin

--- a/src/pages/agent-settings-page/agent-settings-form/agent-settings-form.module.scss
+++ b/src/pages/agent-settings-page/agent-settings-form/agent-settings-form.module.scss
@@ -30,6 +30,11 @@
     grid-column-end: 2;
   }
 
+  &__header-mapping {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+
   &__description {
     grid-column-start: 1;
     grid-column-end: 3;
