--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/compound-cell/compound-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/compound-cell/compound-cell.module.scss
@@ -19,6 +19,7 @@
 
   &__class-name {
     height: 19px;
+    width: 40vw;
     color: map-get($color-palette, black100);
     font-size: 14px;
     font-family: $semibold-font;
@@ -26,7 +27,7 @@
 
   &__class-path {
     height: 16px;
-    max-width: 700px;
+    width: 40vw;
     font-size: 12px;
     color: $slate-gray;
     overflow: hidden;
