--- a/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
+++ b/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
@@ -77,7 +77,7 @@
     line-height: 20px;
   }
 
-  &__agent-status {
+  &__agent-status-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -100,5 +100,9 @@
         color: map-get($color-palette, yellow50);
       }
     }
+  }
+
+  &__spinner-wrapper {
+    margin-left: 8px;
   }
 }
