--- a/src/pages/agent-info-page/agent-info-page.module.scss
+++ b/src/pages/agent-info-page/agent-info-page.module.scss
@@ -24,6 +24,10 @@
     align-items: center;
   }
 
+  &__spinner-wrapper {
+    margin-left: 8px;
+  }
+
   &__toggle-agent-header {
     font-size: 16px;
     font-family: $light-font;
