--- a/src/pages/agent-full-page/dashboard/dashboard.module.scss
+++ b/src/pages/agent-full-page/dashboard/dashboard.module.scss
@@ -1,12 +1,14 @@
+@import '../../../common/style-guide/index';
+
 .dashboard-page {
   &__header {
-    font-size: 20px;
-    line-height: 24px;
-    margin-bottom: 27px;
+    margin: 24px;
+    font-size: 24px;
+    line-height: 32px;
+    font-family: $light-font;
   }
+
   &__content {
-    & > * {
-      margin-bottom: 16px;
-    }
+    margin: 0 24px;
   }
 }
