EPMDJ-1557: Implemented the number of deleted methods
Issue: EPMDJ-1557

--- a/src/pages/agent-full-page/coverage-plugin/project-methods-card/project-methods-card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-card/project-methods-card.module.scss
@@ -17,4 +17,9 @@
       margin-right: 8px;
     }
   }
+
+  &__deleted-methods-additional-info {
+    font-size: 12px;
+    color: $slate-gray;
+  }
 }
