EPMDJ-1494: change allMethod to allModifiedMethods
Issue: EPMDJ-1494

--- a/src/pages/agent-full-page/dashboard/no-plugins-stub/no-plugins-stub.module.scss
+++ b/src/pages/agent-full-page/dashboard/no-plugins-stub/no-plugins-stub.module.scss
@@ -3,6 +3,7 @@
 .no-installed-plugins-stub {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
   color: map-get($color-palette, middle-blue);
