--- a/src/pages/agent-full-page/dashboard/dashboard.module.scss
+++ b/src/pages/agent-full-page/dashboard/dashboard.module.scss
@@ -1,6 +1,11 @@
 @import '../../../common/style-guide/index';
 
 .dashboard-page {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+
   &__header {
     margin: 24px;
     font-size: 24px;
@@ -9,6 +14,8 @@
   }
 
   &__content {
+    display: flex;
+    flex-grow: 1;
     margin: 0 24px;
   }
 }
