--- a/src/pages/agent-full-page/dashboard/plugin-card/plugin-card.module.scss
+++ b/src/pages/agent-full-page/dashboard/plugin-card/plugin-card.module.scss
@@ -2,6 +2,8 @@
 
 .plugin-card {
   border: 1px solid map-get($color-palette, light-blue);
+  height: 214px;
+  width: 100%;
 
   &__header {
     height: 52px;
