--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/item-info/item-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/item-info/item-info.module.scss
@@ -12,23 +12,24 @@
   &__item-wrapper {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    height: 32px;
   }
 
   &__label {
-    display: flex;
-    align-items: center;
+    min-width: 52px;
+    line-height: 32px;
+    text-align: right;
     color: map-get($color-palette, dark-blue);
     font-size: 13px;
     font-family: $semibold-font;
-    line-height: 20px;
-    min-width: 52px;
   }
 
   &__value {
+    margin-left: 20px;
+    line-height: 32px;
     color: $slate-gray;
     font-size: 13px;
-    line-height: 20px;
-    margin-left: 20px;
     word-break: break-all;
   }
 }
