--- a/src/components/popup/popup.module.scss
+++ b/src/components/popup/popup.module.scss
@@ -9,7 +9,7 @@
 
   &__header {
     padding: 0 24px;
-    height: 64px;
+    min-height: 64px;
     border-bottom: 1px solid map-get($color-palette, light-blue);
     font-size: 18px;
     line-height: 24px;
