EPMDJ-1894: fix new build version modal issues, upgrade packages versions
Issue: EPMDJ-1894

--- a/src/pages/agent-full-page/new-build-modal/build-alias/build-alias.module.scss
+++ b/src/pages/agent-full-page/new-build-modal/build-alias/build-alias.module.scss
@@ -38,6 +38,7 @@
     height: 40px;
     font-size: 14px;
     line-height: 40px;
+    color: map-get($color-palette, dark-blue);
   }
 
   &__actions-panel {
