--- a/src/pages/agent-settings-page/general-settings-form/general-settings-form.module.scss
+++ b/src/pages/agent-settings-page/general-settings-form/general-settings-form.module.scss
@@ -10,6 +10,10 @@
     line-height: 24px;
   }
 
+  &__info-icon {
+    margin-right: 8px;
+  }
+
   &__save-changes-button {
     min-height: 32px;
     border-radius: 16px;
