--- a/src/pages/agent-registration-page/general-settings-form/general-settings-form.module.scss
+++ b/src/pages/agent-registration-page/general-settings-form/general-settings-form.module.scss
@@ -10,6 +10,10 @@
     color: $slate-gray;
   }
 
+  &__info-icon {
+    margin-right: 8px;
+  }
+
   &__error-message {
     height: 40px;
     width: 100%;
