--- a/src/pages/agent-registration-page/install-plugins-step/install-plugins-step.module.scss
+++ b/src/pages/agent-registration-page/install-plugins-step/install-plugins-step.module.scss
@@ -12,6 +12,10 @@
     color: $slate-gray;
   }
 
+  &__info-icon {
+    margin-right: 8px;
+  }
+
   &__selected-plugins-info {
     margin: 28px 0px 16px 24px;
     font-family: $light-font;
@@ -56,7 +60,7 @@
     font-family: $semibold-font;
     font-size: 14px;
     line-height: 22px;
-    color: map-get($color-palette, black100);
+    color: $gravel-color;
   }
 
   &__plugin-description {
