--- a/src/pages/agent-settings-page/plugins-settings/plugins-settings.module.scss
+++ b/src/pages/agent-settings-page/plugins-settings/plugins-settings.module.scss
@@ -14,6 +14,10 @@
     line-height: 24px;
   }
 
+  &__info-icon {
+    margin-right: 8px;
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
