--- a/src/pages/agent-settings-page/system-setting-form/system-settings-form.module.scss
+++ b/src/pages/agent-settings-page/system-setting-form/system-settings-form.module.scss
@@ -10,6 +10,10 @@
     line-height: 24px;
   }
 
+  &__info-icon {
+    margin-right: 8px;
+  }
+
   &__save-changes-button {
     min-height: 32px;
     border-radius: 16px;
@@ -66,6 +70,7 @@
     max-width: 728px;
     font-size: 14px;
     line-height: 24px;
+    color: map-get($color-palette, dark-blue);
 
     &--disabled {
       background-color: map-get($color-palette, ultra-light-blue);
