--- a/src/pages/agent-full-page/coverage-plugin/methods-sidebar/methods-sidebar.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/methods-sidebar/methods-sidebar.module.scss
@@ -1,6 +1,6 @@
 @import '../../../../common/style-guide/index';
 
-.methods-modal {
+.methods-sidebar {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    margin: 16px 24px;
+    margin: 16px 0 16px 24px;
     overflow-y: hidden;
   }
 
@@ -55,28 +55,11 @@
   &__method-signature {
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 280px;
   }
 
   &__method-descriptor {
     font-size: 12px;
     color: $slate-gray;
-  }
-
-  &__coverage-icon-wrapper {
-    margin-left: 16px;
-    &--type {
-      &--success {
-        color: map-get($color-palette, green100);
-      }
-
-      &--warning {
-        color: map-get($color-palette, yellow50);
-      }
-
-      &--error {
-        color: map-get($color-palette, red100);
-      }
-    }
   }
 }
