--- a/src/pages/agent-full-page/coverage-plugin/test-details/test-details.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/test-details/test-details.module.scss
@@ -14,10 +14,6 @@
     }
   }
 
-  &__test-cell {
-    color: map-get($color-palette, black100);
-  }
-
   &__table-cell {
     display: flex;
     align-items: center;
@@ -40,5 +36,10 @@
 
   &__table-cell-content {
     width: 40vw;
+  }
+
+  &__actions-cell {
+    color: map-get($color-palette, blue100);
+    cursor: pointer;
   }
 }
