--- a/src/pages/agent-settings-page/agent-settings-page.module.scss
+++ b/src/pages/agent-settings-page/agent-settings-page.module.scss
@@ -1,6 +1,8 @@
 @import '../../common/style-guide/index';
 
 .agent-settings-page {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
 
@@ -30,5 +32,9 @@
 
   &__tabs-panel {
     margin: 0 24px;
+  }
+
+  &__tab-content {
+    flex: 1;
   }
 }
