--- a/src/pages/agent-settings-page/plugins-settings/no-plugins-stub/no-plugins-stub.module.scss
+++ b/src/pages/agent-settings-page/plugins-settings/no-plugins-stub/no-plugins-stub.module.scss
@@ -1,11 +1,11 @@
 @import '../../../../common/style-guide/index';
 
 .no-plugins-stub {
+  height: 100%;
   display: flex;
-  flex-grow: 1;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
 
   &__icon {
     color: map-get($color-palette, light-blue);
@@ -15,14 +15,11 @@
     color: map-get($color-palette, middle-blue);
     font-size: 24px;
     line-height: 32px;
-    text-align: center;
-    margin: 40px 0 8px 0;
   }
 
   &__sub-title {
     color: $slate-gray;
     font-size: 14px;
     line-height: 24px;
-    text-align: center;
   }
 }
