--- a/src/pages/settings-page/settings-page.module.scss
+++ b/src/pages/settings-page/settings-page.module.scss
@@ -1,4 +1,40 @@
+@import '~common/style-guide/index';
+
 .settings-page {
   display: flex;
-  flex-grow: 1;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+
+  &__header-icon {
+    margin-right: 16px;
+  }
+
+  &__agent-status {
+    margin-top: 8px;
+    margin-left: 16px;
+    line-height: 20px;
+  }
+
+  &__error-message {
+    height: 40px;
+    width: 100%;
+    background-color: rgba(255, 2, 2, 0.1);
+    font-size: 14px;
+    line-height: 24px;
+    color: map-get($color-palette, red100);
+  }
+
+  &__error-message-icon {
+    margin-left: 24px;
+    margin-right: 8px;
+  }
+
+  &__tabs-panel {
+    margin: 0 24px;
+  }
+
+  &__tab-content {
+    flex: 1;
+  }
 }
