EPMDJ-2046: Create a new add plugins panel and plugins list page
Issue: EPMDJ-2046

--- a/src/pages/settings-page/agent-settings/agent-settings.module.scss
+++ b/src/pages/settings-page/agent-settings/agent-settings.module.scss
@@ -1,11 +1,12 @@
 @import '~common/style-guide/index';
 
 .agent-settings {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+
   &__tabs-panel {
     margin: 0 24px;
-  }
-
-  &__tab-content {
-    flex: 1;
   }
 }
