--- a/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/add-plugins-modal.module.scss
+++ b/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/add-plugins-modal.module.scss
@@ -6,27 +6,81 @@
   height: 100%;
 
   &__header {
-    display: flex;
-    align-items: center;
-    height: 63px;
+    padding: 24px 24px;
     border-bottom: 1px solid map-get($color-palette, light-blue);
-    padding-left: 24px;
     font-size: 18px;
     line-height: 24px;
     color: map-get($color-palette, black100);
   }
 
+  &__title {
+    margin-top: 16px;
+    font-family: $semibold-font;
+    line-height: 40px;
+    font-size: 14px;
+    color: map-get($color-palette, dark-blue);
+  }
+
   &__content {
-    display: flex;
+    height: 100%;
     flex-grow: 1;
-    margin: 16px 24px;
+    margin: 0px 24px;
   }
 
   &__plugins-list {
+    height: calc(100% - 80px);
     width: 100%;
+    overflow: auto;
     border: 1px solid map-get($color-palette, light-blue);
     border-radius: 4px;
     background-color: map-get($color-palette, white);
+  }
+
+  &__plugins-list-item {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
+
+    &:first-child {
+      border-top: 1px solid map-get($color-palette, light-blue);
+    }
+
+    &--selected {
+      background-color: rgba(248, 231, 28, 0.1);
+      color: map-get($color-palette, white);
+    }
+  }
+
+  &__plugins-icon-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 16px 24px 16px 8px;
+    height: 96px;
+    min-width: 96px;
+    border-radius: 16px;
+    background-color: map-get($color-palette, ultra-light-blue);
+    color: $slate-gray;
+
+    &--selected {
+      background-color: map-get($color-palette, blue100);
+      color: map-get($color-palette, white);
+    }
+  }
+
+  &__plugin-name {
+    font-family: $semibold-font;
+    font-size: 14px;
+    line-height: 22px;
+    color: $gravel-color;
+  }
+
+  &__plugin-description {
+    margin-top: 8px;
+    margin-right: 30px;
+    font-size: 14px;
+    line-height: 22px;
+    color: $slate-gray;
   }
 
   &__actions {
