EPMDJ-2106: Change "Group" name to "Environment"
Issue: EPMDJ-2106

--- a/src/pages/settings-page/agent-settings/general-settings-form/general-settings-form.module.scss
+++ b/src/pages/settings-page/agent-settings/general-settings-form/general-settings-form.module.scss
@@ -49,6 +49,11 @@
     cursor: pointer;
   }
 
+  &__agent-name {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
   &__header-mapping {
     grid-column-start: 2;
     grid-column-end: 3;
