EPMDJ-1886: added new agents-list with service-groups
Issue: EPMDJ-1886

--- a/src/pages/agents-page/table-view/name-column/name-column.module.scss
+++ b/src/pages/agents-page/table-view/name-column/name-column.module.scss
@@ -7,6 +7,12 @@
   line-height: 48px;
   cursor: pointer;
 
+  &__agent-type-icon {
+    display: flex;
+    align-items: center;
+    margin-right: 16px;
+  }
+
   &--unregistered {
     pointer-events: none;
     color: $slate-gray;
