EPMDJ-1886: fix colors at agents-list added agent status
Issue: EPMDJ-1886

--- a/src/pages/agents-page/table-view/table/table.module.scss
+++ b/src/pages/agents-page/table-view/table/table.module.scss
@@ -1,6 +1,6 @@
 @import '~common/style-guide/index';
 
-.table {
+.agents-table {
   border-collapse: collapse;
   width: 100%;
   font-size: 14px;
@@ -29,8 +29,19 @@
   }
 
   &__row {
+    &--nested {
+      border-left: 2px solid map-get($color-palette, blue15);
+      border-right: 2px solid map-get($color-palette, blue15);
+    }
+
+    &--nested-last {
+      border-bottom: 2px solid map-get($color-palette, blue15);
+    }
+
     &--color {
       &--blue {
+        border-left: 2px solid map-get($color-palette, blue15);
+        border-right: 2px solid map-get($color-palette, blue15);
         background-color: rgba(0, 127, 255, 0.15);
       }
       &--gray {
