--- a/src/pages/agents-page/table-view/name-column/name-column.module.scss
+++ b/src/pages/agents-page/table-view/name-column/name-column.module.scss
@@ -1,16 +1,21 @@
 @import '~common/style-guide/index';
 
 .name-column {
-  color: map-get($color-palette, blue100);
   font-size: 14px;
   font-family: $semibold-font;
   line-height: 48px;
-  cursor: pointer;
 
   &__agent-type-icon {
     display: flex;
     align-items: center;
     margin-right: 16px;
+    color: map-get($color-palette, dark-blue);
+  }
+
+  &__agent-name {
+    margin-left: 8px;
+    color: map-get($color-palette, blue100);
+    cursor: pointer;
   }
 
   &--unregistered {
