EPMDJ-2106: Change "group" fild to "environment" at agent entity
Issue: EPMDJ-2106

--- a/src/pages/settings-page/agent-settings/general-settings-form/general-settings-form.module.scss
+++ b/src/pages/settings-page/agent-settings/general-settings-form/general-settings-form.module.scss
@@ -49,8 +49,8 @@
     cursor: pointer;
   }
 
-  &__header-mapping {
-    grid-column-start: 2;
+  &__agent-name {
+    grid-column-start: 1;
     grid-column-end: 3;
   }
 
